# AutoPRD

./: .env.example  .gitignore  README.md  agent.py  input.json  main.py  pyproject.toml  schema.py
doc/: 【赛事详解】“Agent开发哪家强？”——胜算云国产多模型实战PK大赛正式启动！.docx  【赛事详解】“Agent开发哪家强？”——胜算云国产多模型实战PK大赛正式启动！.md  产品经理Agent：用户痛点和应用场景挖掘，输出需求文档.docx  产品经理Agent：用户痛点和应用场景挖掘，输出需求文档.md
docs/: data_schema.md  requirements_analysis.md  system_design.md  【赛事详解】“Agent开发哪家强？”——胜算云国产多模型实战PK大赛正式启动！.md  产品经理Agent：用户痛点和应用场景挖掘，输出需求文档.md
